# XiE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  XiE.xmind  _log.h  basetools.h  main.cpp  wupin_initFromFile.h  xiling_jineng.cpp  xiling_jineng.h  xiling_npc.cpp  xiling_npc.h  xiling_player.cpp  xiling_player.h  xiling_wupin.cpp  xiling_wupin.h  技能集.xlsx  物品集.xlsx
Engine/: CMakeLists.txt
Engine/Assets/: AssetManager.cpp  AssetManager.h
Engine/Core/: Application.cpp  Application.h  GameApp.h  Log.cpp  Log.h
Engine/Launch/: CMakeLists.txt  EntryPoint.cpp  GameBootstrap.cpp  GameBootstrap.h
Engine/Platform/: Window.cpp  Window.h
Engine/Renderer/: FrameBuffer.h  IRenderBackend.h  MeshAsset.cpp  MeshAsset.h  OpenGLBackend.cpp  OpenGLBackend.h  Renderer.cpp  Renderer.h  TriangleAsset.cpp  TriangleAsset.h
Engine/Renderer/Camera/: Camera2D.cpp  Camera2D.h  Camera2DController.cpp  Camera2DController.h
Engine/Renderer/Feature/: IRenderFeature.h  Renderer2DFeature.cpp  Renderer2DFeature.h  Renderer3DFeature.cpp  Renderer3DFeature.h
Engine/Renderer/Scene/: Canvas2DDesc.h
Engine/Utils/: MemoryPool.cpp  MemoryPool.h
Runtime/: CMakeLists.txt  main.cpp
Runtime/Assets/: triangle.txt
XiE_Projects/test2Dgame/: CMakeLists.txt
XiE_Projects/test2Dgame/Assets/Mesh/: main.xmesh
XiE_Projects/test2Dgame/Config/: Game.toml  Input.toml
XiE_Projects/test2Dgame/Source/App/: Test2DGameApp.cpp  Test2DGameApp.h
XiE_Projects/test2Dgame/Source/Entry/: GameModule.cpp
